# bp-cpp

./: .gitignore  .meson.build.swp  README.md  meson.build
art/: color_to_vec4.py
art/images/generator/: ball.py
art/maps/: map-02.txt  map-03.txt  map-04.txt  map-129586.txt  map-293366.txt  map-328181.txt  map-652195.txt  map-783805.txt  map-795022.txt  map-910726.txt  map01.txt  new_locations.txt  raw_map-054189.txt  raw_map-293366.txt  raw_map-328181.txt  raw_map-652195.txt  raw_map-783805.txt  raw_map-795022.txt  raw_map-910726.txt
art/maps/generator/: interpolation.py  mask.py  new_locations.txt  new_locations_file.txt
src/: ball.hpp  draw_users_table.hpp  functions.hpp  gui.hpp  imgui.ini  locations_file.txt  main.cpp  map.hpp  music-player.cpp  music-player.h  new_loc.txt  new_locations_file.txt  out.cpp  rng.cpp  rng.h  scheduler.hpp  shelik.hpp  slideshow.hpp  user.cpp  user.h
src/utils/: common.h  error_handling.h  geometry.hpp  phase.hpp  prog_to_loc.hpp  random_gen.hpp  time.cpp  time.h  time.hpp  vec_utils.hpp
storage/: users.json
